implement getTxn api in ledger service